welcome.lessons.welcome.methods.basics.Methods.scala.error
Methods:10: error: type mismatch;
 found   : Unit
 required: Boolean
  if (i=0){
       ^